--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
+		<!-- This should never be seen -->
 	</head>
 
 	<body>
 		<div class="main" ng-view></div>
 	</body>
-
-<!-- 	<footer>
-	<p>Copyright 2015. All Rights Reserved</p>
-	</footer> -->
 </html>
