--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="lib/angular/angular-route.min.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="out/css/bundle.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
 	</head>
